--- a/atm10/config/simple-discord-link/simple-discord-link.toml
+++ b/atm10/config/simple-discord-link/simple-discord-link.toml
@@ -153,7 +153,7 @@
 	#Advancement Messages. Available variables: %player%, %title%, %description%
 	advancements = "*%player% has made the advancement [%title%]: %description%*"
 	#Chat Messages. THIS DOES NOT APPLY TO EMBED OR WEBHOOK MESSAGES. Available variables: %player%, %message%, %mcname%
-	chat = "%player%: %message%"
+	chat = "**%player%:** %message%"
 	#Death Messages. Available variables: %player%, %message%
 	death = "%player% %message%"
 	#Message to be sent when a player is added to the whitelist
