feat: update ignored commands and fix mech-trowel mod entry

--- a/atm10/config/simple-discord-link/simple-discord-link.toml
+++ b/atm10/config/simple-discord-link/simple-discord-link.toml
@@ -128,7 +128,7 @@
 	#Should whitelist changes be posted to discord
 	whitelistChanged = false
 	#Commands that should not be broadcast to discord
-	ignoredCommands = ["particle", "login", "execute", "sdconfigeditor", "save-all", "save-on", "save-off", "msg", "gamerule", "chunky", "nbt", "wits", "neoforge", "home", "back", "sgear_mats", "sgear_parts", "sgear_traits", "sethome", "tell", "spawn"]
+	ignoredCommands = ["particle", "login", "execute", "sdconfigeditor", "save-all", "save-on", "save-off", "msg", "gamerule", "chunky", "nbt", "wits", "neoforge", "home", "back", "sgear_mats", "sgear_parts", "sgear_traits", "sethome", "tell", "spawn", "rtp"]
 	#Allow mentioning discord roles and users from Minecraft Chat
 	allowMentionsFromChat = false
 
