feat: disable embed messages and set default layout in discord bot config

--- a/atm10/config/simple-discord-link/simple-discord-link.toml
+++ b/atm10/config/simple-discord-link/simple-discord-link.toml
@@ -174,9 +174,9 @@
 		#The Channel the message will be delivered to. Valid entries are CHAT, EVENT, CONSOLE, OVERRIDE
 		channel = "CHAT"
 		#Should the message be sent using EMBED style messages
-		useEmbed = true
+		useEmbed = false
 		#Embed Layout to use
-		embedLayout = "chat"
+		embedLayout = "default"
 		#Override the destination with a custom channel/webhook url. Make sure to change `channel` above to OVERRIDE
 		override = ""
 
