--- a/atm10/config/simple-discord-link/simple-discord-link.toml
+++ b/atm10/config/simple-discord-link/simple-discord-link.toml
@@ -131,7 +131,8 @@
 	ignoredCommands = [
 		"particle", "login", "execute", "sdconfigeditor", "save-all", "save-on", "save-off", "msg",
 		"gamerule", "chunky", "nbt", "wits", "neoforge", "home", "back", "sgear_mats", "sgear_parts",
-		"sgear_traits", "sethome", "tell", "spawn", "rtp", "tpahere", "tpaccept", "trashcan", "ftblibrary"]
+		"sgear_traits", "sethome", "tell", "spawn", "rtp", "tpahere", "tpaccept", "trashcan", "ftblibrary",
+		"tpa"]
 	#Allow mentioning discord roles and users from Minecraft Chat
 	allowMentionsFromChat = false
 
