--- a/atm10/config/bluemap/maps/world_the_nether.conf
+++ b/atm10/config/bluemap/maps/world_the_nether.conf
@@ -15,7 +15,7 @@ dimension: "minecraft:the_nether"
 # The display-name of this map -> how this map will be named on the webapp.
 # You can change this at any time.
 # Default is the id of this map
-name: "world (the_nether)"
+name: "The Nether"
 
 # A lower value makes the map sorted first (in lists and menus), a higher value makes it sorted later.
 # The value needs to be an integer but it can be negative.
