--- a/atm10/config/bluemap/maps/world_the_other.conf
+++ b/atm10/config/bluemap/maps/world_the_other.conf
@@ -10,18 +10,18 @@ world: "world"
 
 # The dimension of the world. Can be "minecraft:overworld", "minecraft:the_nether", "minecraft:the_end"
 # or any dimension-key introduced by a mod or datapack.
-dimension: "minecraft:overworld"
+dimension: "allthemodium:the_other"
 
 # The display-name of this map -> how this map will be named on the webapp.
 # You can change this at any time.
 # Default is the id of this map
-name: "Overworld"
+name: "The Other"
 
 # A lower value makes the map sorted first (in lists and menus), a higher value makes it sorted later.
 # The value needs to be an integer but it can be negative.
 # You can change this at any time.
 # Default is 0
-sorting: 0
+sorting: 300
 
 # The position on the world where the map will be centered if you open it.
 # You can change this at any time.
@@ -31,12 +31,12 @@ sorting: 0
 # The color of the sky as a hex-color
 # You can change this at any time.
 # Default is "#7dabff"
-sky-color: "#7dabff"
+sky-color: "#290000"
 
 # The color of the void as a hex-color
 # You can change this at any time.
 # Default is "#000000"
-void-color: "#000000"
+void-color: "#150000"
 
 # Defines the initial sky-light-strength the map will be set to when it is opened.
 # 0 is no sky-light, 1 is fully lighted.
@@ -48,7 +48,7 @@ sky-light: 1
 # 0 is no ambient light, 1 is fully lighted.
 # You can change this at any time.
 # Default is 0
-ambient-light: 0.1
+ambient-light: 0.6
 
 # BlueMap tries to omit all blocks that are below this Y-level and are not visible from above-ground.
 # More specific: Block-Faces that have a sunlight/skylight value of 0 are removed.
@@ -57,7 +57,7 @@ ambient-light: 0.1
 # Set to a very high value to remove caves everywhere (e.g. 10000)
 # Set to a very low value to remove nothing and render all caves (e.g. -10000)
 # Default is 55 (slightly below water-level)
-remove-caves-below-y: 55
+remove-caves-below-y: -10000
 
 # This is the amount of blocks relative to the "ocean-floor" heightmap that the cave-detection will start at.
 # Everything above that (heightmap-relative) y-level will not be removed.
