--- a/atm10/index.toml
+++ b/atm10/index.toml
@@ -223,6 +223,10 @@ file = "mods/refined-storage-emi-integration.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/schematic-energistics.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/sculk-muffler.pw.toml"
 metafile = true
 
