feat: update ambient light and cave removal settings in BlueMap configuration files

--- a/atm10-dev/config/bluemap/maps/world_undergarden.conf
+++ b/atm10-dev/config/bluemap/maps/world_undergarden.conf
@@ -42,13 +42,13 @@ void-color: "#000000"
 # 0 is no sky-light, 1 is fully lighted.
 # You can change this at any time.
 # Default is 1
-sky-light: 0.8
+sky-light: 1
 
 # Defines the ambient light-strength that every block is receiving, regardless of the sunlight/blocklight.
 # 0 is no ambient light, 1 is fully lighted.
 # You can change this at any time.
 # Default is 0
-ambient-light: 0.75
+ambient-light: 0.6
 
 # BlueMap tries to omit all blocks that are below this Y-level and are not visible from above-ground.
 # More specific: Block-Faces that have a sunlight/skylight value of 0 are removed.
@@ -64,7 +64,7 @@ remove-caves-below-y: -10000
 # Comment or set to a very high value to disable using the ocean-floor heightmap for cave-detection.
 # Changing this value requires a re-render of the map.
 # Defaults to 10000 (disabled)
-cave-detection-ocean-floor: -5
+cave-detection-ocean-floor: 20
 
 # With this value set to true, BlueMap also uses the block-light value (additionally to the sky-light) to "detect caves".
 # (See: remove-caves-below-y)
@@ -82,7 +82,7 @@ max-x: 5008
 min-z: -5008
 max-z: 5008
 #min-y: 50
-#max-y: 100
+max-y: 100
 
 # The minimum "inhabitedTime" value that a chunk must have to be rendered.
 # If you set this to a value greater than 0, bluemap will only render chunks that players have visited already.
