feat: update BlueMap configuration files with render-mask settings and resource pack details

--- a/atm10-dev/config/bluemap/packs/bluemap-create-resource-pack.pw.toml
+++ b/atm10-dev/config/bluemap/packs/bluemap-create-resource-pack.pw.toml
@@ -1,5 +1,5 @@
 name = "Bluemap-Create-Resource-Pack"
-filename = "main.zip"
+filename = "bluemap-create-resource-pack.zip"
 side = "server"
 
 [download]
