--- a/atm10-dev/config/bluemap/maps/world_the_nether.conf
+++ b/atm10-dev/config/bluemap/maps/world_the_nether.conf
@@ -77,12 +77,14 @@ cave-detection-uses-block-light: false
 # If you change these values, bluemap automatically tries to update the map,
 # including deleting map-tiles which are outside the new limits.
 # Default is no min or max value (= infinite bounds)
+render-mask: [{
 min-x: -5008
 max-x: 5008
 min-z: -5008
 max-z: 5008
 #min-y: 50
 max-y: 90
+}]
 
 # The minimum "inhabitedTime" value that a chunk must have to be rendered.
 # If you set this to a value greater than 0, bluemap will only render chunks that players have visited already.
