--- a/atm10/config/bluemap/maps/world_mining.conf
+++ b/atm10/config/bluemap/maps/world_mining.conf
@@ -77,12 +77,14 @@ cave-detection-uses-block-light: false
 # If you change these values, bluemap automatically tries to update the map,
 # including deleting map-tiles which are outside the new limits.
 # Default is no min or max value (= infinite bounds)
+render-mask: [{
 min-x: -7504
 max-x: 7504
 min-z: -7504
 max-z: 7504
 #min-y: 50
 #max-y: 100
+}]
 
 # The minimum "inhabitedTime" value that a chunk must have to be rendered.
 # If you set this to a value greater than 0, bluemap will only render chunks that players have visited already.
