feat: add Bluemap-x-SophisticatedBackpacks pack and update configurations

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "atm10-dev/config/bluemap/packs/BluemapCreateResourcePack"]
 	path = atm10-dev/config/bluemap/packs/BluemapCreateResourcePack
 	url = https://github.com/Uiniel/BlueMap-Create-Resource-Pack.git
+[submodule "atm10-dev/config/bluemap/packs/Bluemap-x-SophisticatedBackpacks"]
+	path = atm10-dev/config/bluemap/packs/Bluemap-x-SophisticatedBackpacks
+	url = https://github.com/TyBraniff/Bluemap-x-SophisticatedBackpacks.git
