feat: enable player-made schematics by updating configuration

--- a/atm10-dev/config/structurize-server.toml
+++ b/atm10-dev/config/structurize-server.toml
@@ -3,7 +3,7 @@
 	#Should the default schematics be ignored (from the jar)? [Default: false]
 	ignoreSchematicsFromJar = false
 	#Should player-made schematics be allowed? [Default: false]
-	allowPlayerSchematics = false
+	allowPlayerSchematics = true
 	#Max world operations per tick (max blocks to place, remove, or replace). [Default: 1000, min: 0, max: 100000]
 	# Default: 1000
 	# Range: 0 ~ 100000
