--- a/atm10-dev/mods/distanthorizons.pw.toml
+++ b/atm10-dev/mods/distanthorizons.pw.toml
@@ -1,6 +1,6 @@
 name = "Distant Horizons"
 filename = "DistantHorizons-2.4.5-b-1.21.1-fabric-neoforge.jar"
-side = "both"
+side = "server"
 
 [download]
 url = "https://cdn.modrinth.com/data/uCdwusMi/versions/bLPLghy9/DistantHorizons-2.4.5-b-1.21.1-fabric-neoforge.jar"
